--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:
 keywords:
 author: wz
 language: zh-CN
-timezone: asia/shanghai
+timezone: Asia/shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -85,7 +85,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Include / Exclude file(s)
