--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "s": "hexo server",
+    "t": "npx tailwindcss -i ./themes/snow-white/source/css/_tailwind.css -o ./themes/snow-white/source/css/tailwind.css --watch",
+    "d": "hexo clean && hexo deploy"
   },
   "hexo": {
     "version": "6.1.0"
