--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
@@ -28,6 +29,8 @@
     "hexo-theme-landscape": "^0.0.3"
   },
   "devDependencies": {
+    "hexo-generator-baidu-sitemap": "^0.1.9",
+    "hexo-generator-sitemap": "^3.0.1",
     "tailwindcss": "^3.0.24"
   }
 }
