--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 热爱写代码.
 description: 吹雨听风独立博客
 keywords: 吹雨听风,吹雨听风独立博客,PHP,Go,支付系统,系统架构,PMP
 author: 吹雨听风
-language: zh-CN
+language: zh
 timezone: Asia/shanghai
 
 # URL
